--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+spring.data.mongodb.uri=mongodb+srv://admin:admin@myfirstmongodbcluster.xqttiv3.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=sample_airbnb
